--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,10 @@
 # flask_cors==4.0.0
 # pymysql==1.1.0
 
+# paddlepaddle==2.5.2
+# paddlenlp==2.5.2
+# pdfplumber
+
 # ---------------------------
 # 使用说明：
 # - 创建数据库 `recruitment`
